--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,27 +15,27 @@ jobs:
         - { name: Shared}
         type:
         - { name: Release }
-        - { name: Debug, flags: -DCMAKE_BUILD_TYPE=Debug
+        - { name: Debug, flags: -DCMAKE_BUILD_TYPE=Debug }
         include:
         - platform: { name: LinuxGCC, os: ubuntu-latest }
           config: { name: Shared }
-   steps:
-   - name: checkout code
-     uses: actions/checkout@v3
+    steps:
+    - name: checkout code
+      uses: actions/checkout@v3
 
-   - name: install linux dependencies
-     if: runner.os == "Linux"
-     run: |
-       sudo apt-get update && sudo apt-get install xorg-dev libxrandr-dev libxcursor-dev libudev-dev libopenal-dev libflac-dev libvorbis-dev libgl1-mesa-dev libegl1-mesa-dev libdrm-dev libgbm-dev
-       git clone https://github.com/SFML/SFML && cd SFML && git checkout 2.6.x
-       export SFML_ROOT=$(pwd)/build/install
-       mkdir build && cd build
-       cmake -DCMAKE_INSTALL_PREFIX=$(pwd)/install -DCMAKE_BUILD_TYPE=${{ matrix.type.name }} .. && make -j4 install && cd ../..
+    - name: install linux dependencies
+      if: runner.os == "Linux"
+      run: |
+        sudo apt-get update && sudo apt-get install xorg-dev libxrandr-dev libxcursor-dev libudev-dev libopenal-dev libflac-dev libvorbis-dev libgl1-mesa-dev libegl1-mesa-dev libdrm-dev libgbm-dev
+        git clone https://github.com/SFML/SFML && cd SFML && git checkout 2.6.x
+        export SFML_ROOT=$(pwd)/build/install
+        mkdir build && cd build
+        cmake -DCMAKE_INSTALL_PREFIX=$(pwd)/install -DCMAKE_BUILD_TYPE=${{ matrix.type.name }} .. && make -j4 install && cd ../..
 
-   - name: configure and build
-     if: matrix.platform.name == "LinuxGCC"
-     shell: bash
-     run: |
-       mkdir build && cd build
-       cmake -DSFML_ROOT=$SFML_ROOT -DCMAKE_INSTALL_PREFIX=$(pwd)/install ..
-       make -j4 install
+    - name: configure and build
+      if: matrix.platform.name == "LinuxGCC"
+      shell: bash
+      run: |
+        mkdir build && cd build
+        cmake -DSFML_ROOT=$SFML_ROOT -DCMAKE_INSTALL_PREFIX=$(pwd)/install ..
+        make -j4 install
