--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
     - name: cache
       uses: actions/cache@v3.2.4
       with:
-        path: $GITHUB_WORKSPACE/SFML/build/install
+        path: ${GITHUB_WORKSPACE}/SFML/build/install
         key: ${{ matrix.platform.name }}-${{ matrix.type.name }}-${{ matrix.config.name }}
 
     - name: install linux dependencies
