--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: cache
+      id: cache-sfml
       uses: actions/cache@v4
       with:
         path: SFML/build/install
@@ -35,7 +36,7 @@ jobs:
         sudo apt-get update && sudo apt-get install xorg-dev libxrandr-dev libxcursor-dev libudev-dev libopenal-dev libflac-dev libvorbis-dev libgl1-mesa-dev libegl1-mesa-dev libdrm-dev libgbm-dev
 
     - name: build sfml
-      if: runner.os == 'Linux' && steps.cache.outputs.cache-hit != 'true'
+      if: runner.os == 'Linux' && steps.cache-sfml.outputs.cache-hit != 'true'
       run: |
         git clone https://github.com/SFML/SFML && cd SFML && git checkout 2.6.x
         export SFML_ROOT=$(pwd)/build/install
