--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
     - name: build sfml
       if: runner.os == 'Linux' && steps.cache-sfml.outputs.cache-hit != 'true'
       run: |
-        git clone https://github.com/SFML/SFML && cd SFML && git checkout 2.6.x
+        git clone https://github.com/SFML/SFML && cd SFML
         export SFML_ROOT=$(pwd)/build/install
         mkdir build && cd build
         cmake -DCMAKE_INSTALL_PREFIX=$(pwd)/install -DCMAKE_BUILD_TYPE=${{ matrix.type.name }} .. && make -j4 install && cd ../..
