--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,11 @@ jobs:
     - name: install linux dependencies
       if: runner.os == 'Linux'
       run: |
-        sudo apt-get update && sudo apt-get install xorg-dev libxrandr-dev libxcursor-dev libudev-dev libopenal-dev libflac-dev libvorbis-dev libgl1-mesa-dev libegl1-mesa-dev libdrm-dev libgbm-dev
+        sudo apt-get update && sudo apt-get install -y \
+          libfreetype-dev libx11-dev libudev-dev libopenal-dev libflac-dev libvorbis-dev libogg-dev \
+          libxcb1-dev libxcb-image0-dev libxcb-randr0-dev libxcb-util0-dev libxcb-icccm4-dev \
+          libxcb-xkb-dev libxcb-keysyms1-dev libxcb-xinerama0-dev libxcursor-dev libxrandr-dev \
+          libxinerama-dev libxi-dev libgl1-mesa-dev libjpeg-dev libharfbuzz-dev
 
     - name: build sfml
       if: runner.os == 'Linux' && steps.cache-sfml.outputs.cache-hit != 'true'
